<resources>
    <string name="app_name">Calculator</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="plus_sign">+</string>
    <string name="letter_c">C</string>
    <string name="equal_sign">=</string>
</resources>
